--- a/ClassSRM/app.config
+++ b/ClassSRM/app.config
@@ -3,8 +3,6 @@
 <configSections>
 </configSections>
 <connectionStrings>
-    <add name="ClassSRM.Properties.Settings.ClassSRMConnectionString"
-        connectionString="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True"
-        providerName="System.Data.SqlClient" />
+    <add name="ClassSRM.Properties.Settings.ClassSRMConnectionString" connectionString="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" providerName="System.Data.SqlClient"/>
 </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
