--- a/ClassSRM/app.config
+++ b/ClassSRM/app.config
@@ -2,6 +2,11 @@
 <configuration>
 <configSections>
 </configSections>
+  <appSettings>
+    <add key="Tosifi System" value="true" />
+    <add key="FontFamily" value="Tahoma" />
+    <add key="FontSize" value="8" />
+  </appSettings>
 <connectionStrings>
     <add name="ClassSRM.Properties.Settings.ClassSRMConnectionString" connectionString="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" providerName="System.Data.SqlClient"/>
 </connectionStrings>
