بهبود اجرای 100 درصدی پوسته روی نرم افزار افزودن تنظیمات پیشفرض به فایل کانفیگ

--- a/ClassSRM/app.config
+++ b/ClassSRM/app.config
@@ -4,8 +4,12 @@
 </configSections>
   <appSettings>
     <add key="Tosifi System" value="true" />
+    <add key="Font" value="Default" />
     <add key="FontFamily" value="Tahoma" />
     <add key="FontSize" value="8" />
+    <add key="Auto Start" value="false" />
+    <add key="Login" value="false" />
+    <add key="Skin" value="DevExpress Style" />
   </appSettings>
 <connectionStrings>
     <add name="ClassSRM.Properties.Settings.ClassSRMConnectionString" connectionString="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" providerName="System.Data.SqlClient"/>
