افزودن ارزشیابی فعالیت ها افزودن تنظیمات ارزشیابی

--- a/ClassSRM/app.config
+++ b/ClassSRM/app.config
@@ -4,6 +4,7 @@
 </configSections>
   <appSettings>
     <add key="Tosifi System" value="true" />
+    <add key="ActivityPoint" value="Default" />
     <add key="Font" value="Default" />
     <add key="FontFamily" value="Tahoma" />
     <add key="FontSize" value="8" />
