--- a/ClassSRM/app.config
+++ b/ClassSRM/app.config
@@ -13,6 +13,6 @@
     <add key="Skin" value="DevExpress Style" />
   </appSettings>
 <connectionStrings>
-    <add name="ClassSRM.Properties.Settings.ClassSRMConnectionString" connectionString="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="ClassSRM.Properties.Settings.ClassSRMConnectionString" connectionString="Data Source=.\SQLExpress;Initial Catalog=ClassSRM;Integrated Security=True" providerName="System.Data.SqlClient"/>
 </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
