--- a/ClassSRM/app.config
+++ b/ClassSRM/app.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<configSections>
-</configSections>
+  <configSections>
+  </configSections>
   <appSettings>
     <add key="Tosifi System" value="true" />
     <add key="ActivityPoint" value="Default" />
@@ -12,7 +12,10 @@
     <add key="Login" value="false" />
     <add key="Skin" value="DevExpress Style" />
   </appSettings>
-<connectionStrings>
-    <add name="ClassSRM.Properties.Settings.ClassSRMConnectionString" connectionString="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" providerName="System.Data.SqlClient"/>
-</connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+  <connectionStrings>
+    <add name="ClassSRM.Properties.Settings.ClassSRMConnectionString" connectionString="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+</configuration>
