--- a/ClassSRM/app.config
+++ b/ClassSRM/app.config
@@ -11,10 +11,12 @@
     <add key="Auto Start" value="false" />
     <add key="Login" value="false" />
     <add key="Skin" value="DevExpress Style" />
+    <add key="ConServer" value="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" />
+    <add key="IsConServer" value="false" />
   </appSettings>
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="ClassSRM.Properties.Settings.ClassSRMConnectionString" connectionString="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
