--- a/ClassSRM/app.config
+++ b/ClassSRM/app.config
@@ -14,9 +14,9 @@
     <add key="ConServer" value="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" />
     <add key="IsConServer" value="false" />
   </appSettings>
-  <!--<connectionStrings>
+  <connectionStrings>
     <add name="ClassSRM.Properties.Settings.ClassSRMConnectionString" connectionString="Data Source=.;Initial Catalog=ClassSRM;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
