Added Scheduler Some Improvments افزوده شدن زمانبندی ملاقات ها بهبود کلی

--- a/ClassSRM/ClassSRM.csproj
+++ b/ClassSRM/ClassSRM.csproj
@@ -101,6 +101,9 @@
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="DevExpress.XtraPrinting.v17.1, Version=17.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraScheduler.v17.1, Version=17.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraScheduler.v17.1.Core, Version=17.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraScheduler.v17.1.Extensions, Version=17.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="FarsiLibrary.Win.DevExpress.17.1, Version=2.7.0.0, Culture=neutral, PublicKeyToken=def7c46cace23f8f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\FarsiLibrary.Win.DevExpress.17.1.dll</HintPath>
@@ -272,6 +275,12 @@
     <Compile Include="Forms\Settings.Designer.cs">
       <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Shedule.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Shedule.Designer.cs">
+      <DependentUpon>Shedule.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\StudentList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -373,6 +382,9 @@
     <EmbeddedResource Include="Forms\Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Shedule.resx">
+      <DependentUpon>Shedule.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\StudentList.resx">
       <DependentUpon>StudentList.cs</DependentUpon>
     </EmbeddedResource>
@@ -419,7 +431,9 @@
       <LastGenOutput>ClassSRM.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
+    <None Include="Properties\DataSources\Appointment.datasource" />
     <None Include="Properties\DataSources\CheckV.datasource" />
+    <None Include="Properties\DataSources\Resource.datasource" />
     <None Include="Properties\DataSources\SumAE.datasource" />
     <None Include="Properties\DataSources\SumEva.datasource" />
     <None Include="Properties\DataSources\tbl_ActPoint.datasource" />
