Added Scheduler for Form1 Better Handle for UI Form1 Fixed Calendar Date.Now افزودن زمانبندی کارها  به فرم اول بهبود رابط کاربری فرم اول حل مشکل عدم بروزبودن تقویم

--- a/ClassSRM/ClassSRM.csproj
+++ b/ClassSRM/ClassSRM.csproj
@@ -143,6 +143,7 @@
     <Compile Include="ConfigServer.Designer.cs">
       <DependentUpon>ConfigServer.cs</DependentUpon>
     </Compile>
+    <Compile Include="DBAppointmentList.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
